--- a/.github/workflows/test-with-mysql.yml
+++ b/.github/workflows/test-with-mysql.yml
@@ -20,7 +20,7 @@ jobs:
           MYSQL_USER: ${{ env.MYSQL_USER }}
           MYSQL_PASSWORD: ${{ env.MYSQL_PASSWORD }}
         ports:
-        - 3306/tcp
+        - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval 20s --health-timeout 10s --health-retries 10
     steps:
       - name: Checkout code
@@ -47,7 +47,7 @@ jobs:
             ${{ runner.os }}-yarn-
       - name: Debug
         run: |
-          mysqladmin --host=localhost --port ${{ job.services.mysql.ports[3306] }} --user root --password  ${{ env.MYSQL_ROOT_PASSWORD }} variables | grep socket
+          mysqladmin --host=127.0.0.1 --port 3306 --user root --password  ${{ env.MYSQL_ROOT_PASSWORD }} variables | grep socket
       - name: Install packages
         run: |
           yarn install --pure-lockfile
