--- a/.github/workflows/test-with-mysql.yml
+++ b/.github/workflows/test-with-mysql.yml
@@ -19,6 +19,7 @@ jobs:
           MYSQL_DATABASE: ${{ env.MYSQL_DB }}
           MYSQL_USER: ${{ env.MYSQL_USER }}
           MYSQL_PASSWORD: ${{ env.MYSQL_PASSWORD }}
+          MYSQL_ALLOW_EMPTY_PASSWORD: true
         ports:
         - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval 20s --health-timeout 10s --health-retries 10
