--- a/.github/workflows/test-with-mysql.yml
+++ b/.github/workflows/test-with-mysql.yml
@@ -48,7 +48,7 @@ jobs:
             ${{ runner.os }}-yarn-
       - name: Debug
         run: |
-          mysqladmin --host=127.0.0.1 --port 3306 --user root --password  ${{ env.MYSQL_ROOT_PASSWORD }} variables | grep socket
+          mysqladmin --host=127.0.0.1 --port 3306 --user root  variables | grep socket
       - name: Install packages
         run: |
           yarn install --pure-lockfile
