--- a/.github/workflows/test-with-mysql.yml
+++ b/.github/workflows/test-with-mysql.yml
@@ -57,6 +57,7 @@ jobs:
         run: |
           gem install bundler
           bundle install --jobs 4 --retry 3
+          bin/rails db:migrate
           bin/rails db:setup
       - name: Run tests
         run: bundle exec rake test 
