changing db name

--- a/.github/workflows/test-with-mysql.yml
+++ b/.github/workflows/test-with-mysql.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       MYSQL_USER: myapp
-      MYSQL_DB: sample_rails_mysql_development
+      MYSQL_DB: sample_rails_mysql_test
       MYSQL_HOST: 127.0.0.1
       MYSQL_PASSWORD: ${{ secrets.RAILS_TEST_DB_PASSWORD }}
       MYSQL_ROOT_PASSWORD: ${{ secrets.RAILS_TEST_DB_ROOT_PASSWORD }}
