--- a/.github/workflows/test-with-mysql.yml
+++ b/.github/workflows/test-with-mysql.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Install packages
         run: |
           yarn install --pure-lockfile
-      # make sure config.active_record.schema_format = :sql is set in config/environments/development.rb
+      # make sure config.active_record.schema_format = :sql is set in application.rb
       - name: Setup test database
         run: |
           gem install bundler
